# birdies

./: .env.example  README.md  main.py  pyproject.toml  quickstart.md
src/: livekit.py  main.py
src/agent/: main.py
src/record/: analysis.py  audio_ring_buffer.py  audiobuffer.py  birdnet.py  detection.py  recorder.py  test.py
src/tflite_runtime/: __init__.py  interpreter.py
tests/: test_analysis.py  test_audio_ring_buffer.py
