[project]
name = "birdies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "birdnetlib>=0.18.1",
    "librosa>=0.11.0",
    "livekit-agents>=1.5.17",
    "numpy<2",
    "python-dotenv>=1.2.2",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "torch>=2.2.2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
