[project]
name = "birdies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "birdnetlib>=0.18.1",
    "librosa>=0.11.0",
    "livekit-agents>=1.5.17",
    "numpy<2",
    "python-dotenv>=1.2.2",
    "ai-edge-litert>=1.0.1 ; sys_platform == 'darwin'",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "tflite-runtime>=2.14.0 ; sys_platform != 'darwin'",
    "torch>=2.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
